[gd_scene load_steps=35 format=3 uid="uid://cmdid7nsi3roo"]

[ext_resource type="PackedScene" uid="uid://povcfkwhestl" path="res://objects/Strumline.tscn" id="1_6co6l"]
[ext_resource type="Shader" uid="uid://bm7qf1ib4ig80" path="res://scenes/repeating.tres" id="1_eok8j"]
[ext_resource type="Script" path="res://scenes/gameplay.gd" id="1_lb0mh"]
[ext_resource type="Texture2D" uid="uid://52qww261vwpf" path="res://images/pingas.png" id="3_c1ddl"]
[ext_resource type="PackedScene" uid="uid://bfayv0hv6nrpg" path="res://objects/NoteGroup.tscn" id="3_lin26"]
[ext_resource type="Script" path="res://objects/ShakeyControl.gd" id="4_1xe7f"]
[ext_resource type="Script" path="res://addons/radial_progress/RadialProgress.gd" id="4_8wwb4"]
[ext_resource type="FontFile" uid="uid://bhfyiooadgc6o" path="res://fonts/sazanami-gothic.ttf" id="5_xi5wg"]
[ext_resource type="FontFile" uid="uid://df0aiudd6bxvl" path="res://fonts/BOLD.TTF" id="7_qhl0o"]
[ext_resource type="Shader" path="res://scenes/rgb.gdshader" id="8_w18r1"]
[ext_resource type="Texture2D" uid="uid://domvth5oso1ry" path="res://images/hit_graph.png" id="9_tx3rd"]
[ext_resource type="Shader" path="res://scenes/rgbasa.gdshader" id="12_rsh6q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8yc7q"]
shader = ExtResource("1_eok8j")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c20jr"]
shader = ExtResource("1_eok8j")

[sub_resource type="LabelSettings" id="LabelSettings_pmgu6"]
font = ExtResource("5_xi5wg")
font_size = 128
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6t83f"]
shader = ExtResource("8_w18r1")
shader_parameter/r = Color(0.913725, 0, 0.827451, 1)
shader_parameter/g = Color(1, 0.654902, 0.713726, 1)
shader_parameter/b = Color(1, 0.478431, 0.752941, 1)
shader_parameter/mult = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdatl"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jjkpg"]
font = ExtResource("5_xi5wg")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_kghg8"]
font_size = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0tb3i"]
content_margin_left = 4.0
content_margin_top = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_7x8t2"]
font = ExtResource("7_qhl0o")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_tnyvj"]
font = ExtResource("7_qhl0o")
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m0w28"]
font = ExtResource("5_xi5wg")
font_size = 36
outline_size = 18
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dti0n"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_ii06q"]
font = ExtResource("5_xi5wg")
font_size = 10
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qaw2f"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0f884"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xkmq6"]
shader = ExtResource("12_rsh6q")
shader_parameter/enabled = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7mtg4"]
content_margin_right = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_q7qug"]
font = ExtResource("5_xi5wg")
font_size = 52

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m6xw0"]
shader = ExtResource("12_rsh6q")
shader_parameter/enabled = true

[sub_resource type="LabelSettings" id="LabelSettings_1yhhw"]
font = ExtResource("5_xi5wg")
font_size = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0u2ua"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvt0f"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="Node2D" type="Node2D"]
material = SubResource("ShaderMaterial_8yc7q")
script = ExtResource("1_lb0mh")

[node name="Pingas" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_c20jr")
position = Vector2(318, 240)
texture = ExtResource("3_c1ddl")

[node name="Strumline" parent="." instance=ExtResource("1_6co6l")]
position = Vector2(320, 420)
scroll_speed = 600

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 480.0
script = ExtResource("4_1xe7f")

[node name="RadialProgress" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_8wwb4")
max_value = 1.0
radius = 80.0
progress = 1.0
thickness = 10.0
bg_color = Color(0, 0, 0, 1)
bar_color = Color(1, 1, 1, 1)
ring = true
nb_points = 128

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = SubResource("LabelSettings_pmgu6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoteGroup" parent="." instance=ExtResource("3_lin26")]

[node name="HitGraph" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6t83f")
position = Vector2(396, 397)
texture = ExtResource("9_tx3rd")
centered = false

[node name="skip_label" type="Label" parent="."]
offset_left = 161.0
offset_top = 344.0
offset_right = 481.0
offset_bottom = 367.0
theme_override_styles/normal = SubResource("StyleBoxFlat_kdatl")
text = "Press SPACE to skip to where the action begins!"
label_settings = SubResource("LabelSettings_jjkpg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 10.0
offset_top = 7.0
offset_right = 50.0
offset_bottom = 30.0
label_settings = SubResource("LabelSettings_kghg8")

[node name="Song Credit" type="Label" parent="."]
offset_right = 161.0
offset_bottom = 25.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_0tb3i")
text = "Tuteral
By Burgerballs"
label_settings = SubResource("LabelSettings_7x8t2")
vertical_alignment = 1
autowrap_mode = 1

[node name="Accuracy" type="Label" parent="."]
offset_left = 147.0
offset_top = 443.0
offset_right = 209.0
offset_bottom = 465.0
text = "100.0"
label_settings = SubResource("LabelSettings_tnyvj")
vertical_alignment = 1

[node name="Decorator" type="Label" parent="Accuracy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -38.0
offset_right = 34.0
offset_bottom = 6.0
grow_horizontal = 0
grow_vertical = 0
text = "%"
label_settings = SubResource("LabelSettings_m0w28")

[node name="Label" type="Label" parent="Accuracy"]
layout_mode = 0
offset_left = -3.0
offset_top = -20.0
offset_right = 53.0
offset_bottom = -4.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dti0n")
text = "Accuracy"
label_settings = SubResource("LabelSettings_ii06q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Misses" type="Label" parent="."]
offset_left = 394.0
offset_top = 443.0
offset_right = 482.0
offset_bottom = 465.0
text = "999999"
label_settings = SubResource("LabelSettings_tnyvj")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label" type="Label" parent="Misses"]
layout_mode = 0
offset_left = 44.0
offset_top = -20.0
offset_right = 88.0
offset_bottom = -4.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dti0n")
text = "Misses"
label_settings = SubResource("LabelSettings_ii06q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
offset_left = 258.0
offset_top = 443.0
offset_right = 384.0
offset_bottom = 465.0
text = "999999999"
label_settings = SubResource("LabelSettings_tnyvj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Score"]
layout_mode = 0
offset_left = 34.0
offset_top = -20.0
offset_right = 90.0
offset_bottom = -4.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dti0n")
text = "Score"
label_settings = SubResource("LabelSettings_ii06q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Combo" type="Label" parent="."]
offset_left = 258.0
offset_top = 390.0
offset_right = 384.0
offset_bottom = 412.0
text = "0x"
label_settings = SubResource("LabelSettings_tnyvj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Combo"]
layout_mode = 0
offset_left = 15.0
offset_top = -21.0
offset_right = 108.0
offset_bottom = -5.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dti0n")
text = "Combo (TEMPORARY)"
label_settings = SubResource("LabelSettings_ii06q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_top = 472.0
offset_right = 640.0
offset_bottom = 480.0
theme_override_styles/background = SubResource("StyleBoxFlat_qaw2f")
theme_override_styles/fill = SubResource("StyleBoxFlat_0f884")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="ProgressBar"]
layout_mode = 0
offset_left = 248.0
offset_top = -9.0
offset_right = 390.0
offset_bottom = 4.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dti0n")
text = "99:99:999 / 99:99:999"
label_settings = SubResource("LabelSettings_ii06q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rank" type="Label" parent="."]
self_modulate = Color(0, 1, 0, 1)
material = SubResource("ShaderMaterial_xkmq6")
offset_left = 1.0
offset_top = 406.0
offset_right = 79.0
offset_bottom = 483.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_7mtg4")
text = ":3"
label_settings = SubResource("LabelSettings_q7qug")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label" type="Label" parent="Rank"]
layout_mode = 0
offset_top = 9.0
offset_right = 78.0
offset_bottom = 25.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dti0n")
text = "Rank"
label_settings = SubResource("LabelSettings_ii06q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grade" type="Label" parent="."]
self_modulate = Color(0, 1, 1, 1)
material = SubResource("ShaderMaterial_m6xw0")
offset_left = 572.0
offset_top = 406.0
offset_right = 640.0
offset_bottom = 483.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_7mtg4")
text = "S+"
label_settings = SubResource("LabelSettings_1yhhw")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label" type="Label" parent="Grade"]
layout_mode = 0
offset_left = -11.0
offset_top = 7.0
offset_right = 67.0
offset_bottom = 23.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dti0n")
text = "Accuracy Grade"
label_settings = SubResource("LabelSettings_ii06q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Progress" type="ProgressBar" parent="Grade"]
layout_mode = 0
offset_left = -8.0
offset_top = 25.0
offset_bottom = 69.0
theme_override_styles/background = SubResource("StyleBoxFlat_0u2ua")
theme_override_styles/fill = SubResource("StyleBoxFlat_hvt0f")
value = 50.0
fill_mode = 3
show_percentage = false
